testfx/errors/error_tests/err_17_chain_call_error.fx
// 测试17: 方法链调用错误
arr := [1, 2, 3]
result := arr.>len.>
